--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,24 @@
         <!--android:name="com.wisecityllc.cookedapp.NavigationDrawerFragment"-->
         <!--tools:layout="@layout/fragment_navigation_drawer" />-->
 
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="#7d9d9e98"
+        android:id="@+id/main_loading_view"
+        android:visibility="visible">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="114dp"
+            android:layout_height="114dp"
+            android:id="@+id/progressBar2"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
     <fragment android:id="@+id/navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
         android:layout_gravity="start"
