+Fixed some bugs +Added profile pic functionality to registration screen

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -62,6 +62,17 @@
 
     </LinearLayout>
 
+    <ImageButton
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:id="@+id/registration_profile_pic_button"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/round_button"
+        android:adjustViewBounds="false"
+        android:src="@drawable/default_bio_pic"
+        android:maxHeight="150dp"
+        android:maxWidth="150dp" />
 
 
 </RelativeLayout>
