--- a/app/src/main/res/layout/activity_pre_login.xml
+++ b/app/src/main/res/layout/activity_pre_login.xml
@@ -43,7 +43,7 @@
     <fragment android:id="@+id/navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:name="com.wisecityllc.cookedapp.NavigationDrawerFragment"
+        android:name="com.wisecityllc.cookedapp.fragments.NavigationDrawerFragment"
         tools:layout="@layout/fragment_navigation_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
