--- a/app/src/main/res/drawable/round_plus_button_pressed.xml
+++ b/app/src/main/res/drawable/round_plus_button_pressed.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#20da9f" />
+    <solid android:color="#555555" />
 
     <stroke
         android:width="2dp"
-        android:color="#1d1d1d"/>
+        android:color="#20da9f"/>
 
 </shape>
