--- a/app/src/main/res/drawable/round_plus_button_selector.xml
+++ b/app/src/main/res/drawable/round_plus_button_selector.xml
@@ -4,7 +4,7 @@
         android:state_enabled="false"
         android:drawable="@drawable/round_plus_button_disabled" />
     <item
-        android:state_pressed="true"
+        android:state_checked="true"
         android:state_enabled="true"
         android:drawable="@drawable/round_plus_button_pressed" />
     <item
