--- a/app/src/main/res/layout/activity_message_wall.xml
+++ b/app/src/main/res/layout/activity_message_wall.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,15 +8,26 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.wisecityllc.cookedapp.activities.MessageWallActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <ListView
         android:id="@+id/messages_list_view"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:background="@android:color/darker_gray"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     </ListView>
 
-</LinearLayout>
+    <fragment android:name="com.wisecityllc.cookedapp.fragments.PostMessageUIFragment"
+        android:id="@+id/post_message_ui_fragment"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_post_message_ui" />
+
+
+
+</RelativeLayout>
