--- a/app/src/main/res/layout/activity_message_wall.xml
+++ b/app/src/main/res/layout/activity_message_wall.xml
@@ -8,6 +8,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.wisecityllc.cookedapp.activities.MessageWallActivity">
 
+
+
     <ListView
         android:id="@+id/messages_list_view"
         android:layout_alignParentStart="true"
@@ -28,6 +30,21 @@
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_post_message_ui" />
 
+    <TextView
+        android:id="@+id/messages_activity_no_messages_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="No messages yet for this group.\nWhy not post one?"
+        android:visibility="gone"
+        android:textSize="18sp"/>
 
+    <ProgressBar
+        android:id="@+id/messages_activity_loading_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminate="false" />
 
 </RelativeLayout>
