--- a/app/src/main/res/layout/item_list_group.xml
+++ b/app/src/main/res/layout/item_list_group.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
+
+<LinearLayout
+    android:id="@+id/group_list_item_body"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,3 +27,16 @@
         android:text="purpose"/>
 
 </LinearLayout>
+
+<Button
+    android:id="@+id/group_list_item_details_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="12sp"
+    android:background="@android:color/holo_green_dark"
+    android:textColor="@android:color/white"
+    android:text="Details"
+    android:layout_gravity="bottom|right"
+    android:visibility="gone"/>
+
+</FrameLayout>
