--- a/app/src/main/res/layout/activity_group_details.xml
+++ b/app/src/main/res/layout/activity_group_details.xml
@@ -95,6 +95,7 @@
         app:includeMembers="true"
         app:includeAdmins="true"
         app:includePendingAwaitingApproval="true"
+        app:includePendingInvitationSent="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
