--- a/app/src/main/res/layout/item_list_group_members.xml
+++ b/app/src/main/res/layout/item_list_group_members.xml
@@ -38,4 +38,12 @@
         android:layout_gravity="bottom|right"
         android:visibility="visible"/>
 
+    <ProgressBar
+        android:id="@+id/group_member_list_loading_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|right"
+        android:visibility="gone"/>
+
 </RelativeLayout>
