--- a/app/src/main/res/layout/fragment_post_message_ui.xml
+++ b/app/src/main/res/layout/fragment_post_message_ui.xml
@@ -81,7 +81,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Send Message"
-            android:layout_marginRight="100dp" />
+            android:layout_marginRight="100dp"
+            android:capitalize="sentences" />
 
     </FrameLayout>
 
