--- a/app/src/main/res/layout/activity_edit_user_details.xml
+++ b/app/src/main/res/layout/activity_edit_user_details.xml
@@ -85,7 +85,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLength="200"
+                android:layout_marginBottom="10dp"
                 android:hint="Short Description (200 chars max)"/>
+
+            <Button
+                android:id="@+id/user_details_save_changes_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:background="@color/material_deep_teal_500"
+                android:padding="4dp"
+                android:layout_gravity="center_horizontal"
+                android:text="Save Changes"/>
 
 
         </LinearLayout>
