--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -1,4 +1,4 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="8dp"
@@ -8,21 +8,17 @@
     android:orientation="vertical"
     tools:context="com.wisecityllc.cookedapp.activities.UserDetailsActivity">
 
-    <LinearLayout
-        android:id="@+id/user_details_scrollview_content_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical">
 
         <com.parse.ParseImageView
             android:id="@+id/user_details_profile_picture"
+            android:layout_alignParentTop="true"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginBottom="10dp"/>
 
         <TextView
             android:id="@+id/user_details_name_text_view"
+            android:layout_below="@id/user_details_profile_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Name"
@@ -30,6 +26,7 @@
 
         <TextView
             android:id="@+id/user_details_description_text_view"
+            android:layout_below="@id/user_details_name_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="200"
@@ -37,12 +34,15 @@
             android:hint="Short Description (200 chars max)"/>
 
         <TextView
+            android:id="@+id/user_details_link_text"
             android:layout_width="wrap_content"
+            android:layout_below="@id/user_details_description_text_view"
             android:layout_height="wrap_content"
             android:text="Links:"/>
 
         <TextView
             android:id="@+id/user_details_link_1_text_view"
+            android:layout_below="@id/user_details_link_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textUri"
@@ -51,6 +51,7 @@
 
         <TextView
             android:id="@+id/user_details_link_2_text_view"
+            android:layout_below="@id/user_details_link_1_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textUri"
@@ -59,6 +60,7 @@
 
         <TextView
             android:id="@+id/user_details_link_3_text_view"
+            android:layout_below="@id/user_details_link_2_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textUri"
@@ -67,6 +69,7 @@
 
         <TextView
             android:id="@+id/user_details_email_address_text_view"
+            android:layout_below="@id/user_details_link_3_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -75,21 +78,37 @@
 
         <TextView
             android:id="@+id/user_details_phone_number_text_view"
+            android:layout_below="@id/user_details_email_address_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="phone"
             android:layout_marginBottom="10dp"
             android:hint="Mobile Phone"/>
 
+        <TextView
+            android:id="@+id/user_details_member_of_text"
+            android:layout_below="@id/user_details_phone_number_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Member of:"
+            android:layout_marginBottom="20dp" />
+
+        <ProgressBar
+            android:id="@+id/user_details_loading_indicator"
+            android:layout_below="@id/user_details_member_of_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
+
         <ListView
             android:id="@+id/user_details_groups_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        </ListView>
-
-
-    </LinearLayout>
+            android:layout_below="@id/user_details_member_of_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentBottom="true"/>
 
 
-</ScrollView>
+
+</RelativeLayout>
