--- a/app/src/main/res/layout/item_list_group_members.xml
+++ b/app/src/main/res/layout/item_list_group_members.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
 
-    <com.parse.ParseImageView
+    <com.wisecityllc.cookedapp.views.ClickableUserPortrait
         android:id="@+id/group_member_list_member_photo"
         android:background="@drawable/circle_shape"
         android:layout_alignParentStart="true"
