--- a/app/src/main/res/layout/item_list_message.xml
+++ b/app/src/main/res/layout/item_list_message.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:padding="5dp">
 
-    <com.parse.ParseImageView
+    <com.wisecityllc.cookedapp.views.ClickableUserPortrait
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_width="50dp"
