--- a/app/src/main/res/layout/activity_invite_members.xml
+++ b/app/src/main/res/layout/activity_invite_members.xml
@@ -1,87 +1,95 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.wisecityllc.cookedapp.activities.InviteMembersActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Group Name"
-        android:id="@+id/invite_members_group_name"
-        android:textSize="24dp"
-        android:paddingTop="12dp"
-        android:paddingLeft="4dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@android:color/darker_gray" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_marginLeft="16dp"
-        android:text="@string/enter_up_to_four_new_members_at_a_time" />
 
     <LinearLayout
-        android:id="@+id/invite_members_invite_text_fields_holder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="com.wisecityllc.cookedapp.activities.InviteMembersActivity">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/add_email_address"
-            android:layout_marginTop="4dp"/>
 
-        <EditText
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/add_email_address"
-            android:layout_marginTop="4dp"/>
+            android:text=""
+            android:id="@+id/invite_members_group_name"
+            android:textSize="24dp"
+            android:paddingTop="12dp"
+            android:paddingLeft="4dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/add_email_address"
-            android:layout_marginTop="4dp"/>
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="2dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/darker_gray" />
 
-        <EditText
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/add_email_address"
-            android:layout_marginTop="4dp"/>
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_marginLeft="16dp"
+            android:text="@string/enter_invitee_email_address" />
+
+        <LinearLayout
+            android:id="@+id/invite_members_invite_text_fields_holder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/add_email_address"
+                android:layout_marginTop="4dp"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/invite_members_send_invites_button"
+            android:background="#00b6a1"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:layout_width="fill_parent"
+            android:maxWidth="220dp"
+            android:minWidth="100dp"
+            android:layout_height="60dp"
+            android:textColor="@android:color/white"
+            android:text="@string/send_invitation"
+            android:onClick="sendInvites"/>
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/invite_members_send_invites_button"
-        android:background="#00b6a1"
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
+    <FrameLayout
         android:layout_width="fill_parent"
-        android:maxWidth="220dp"
-        android:minWidth="100dp"
-        android:layout_height="60dp"
-        android:textColor="@android:color/white"
-        android:text="@string/invite_new_members"
-        android:onClick="sendInvites"/>
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="#7d9d9e98"
+        android:id="@+id/loading_view"
+        android:visibility="visible">
 
-</LinearLayout>
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="114dp"
+            android:layout_height="114dp"
+            android:id="@+id/progressBar2"
+            android:layout_gravity="center" />
+    </FrameLayout>
+</RelativeLayout>
